Moved Ziqiao to past student

--- a/students.html
+++ b/students.html
@@ -37,7 +37,6 @@ Michael Reiter's home page</font></a>
 <li>Sheng Liu</li>
 <li>Andrew Reed</li>
 <li>Ke Coby Wang</li>
-<li><a href="http://cs.unc.edu/~ziqiao/">Ziqiao Zhou</a></li>
 </ul>
 </p>
 
@@ -117,6 +116,10 @@ via System-Wide Coordination and Optimization</a></i>
 
 <li><a href="http://web.cse.ohio-state.edu/~yinqian/">Yinqian Zhang</a>, PhD, 2014.
 <br>Thesis: <i><a href="https://doi.org/10.17615/xt8k-ee40">Cache-Based Side-Channel Attacks in Multi-Tenant Public Clouds and Their Countermeasures</a></i>
+</li>
+
+<li><a href="https://www.linkedin.com/in/ziqiao-zhou-a02b9b78/">Ziqiao Zhou</a>, PhD, 2020.
+<br>Thesis: <i>Evaluating Information Leakage by Quantitative and Interpretable Measurements</i>
 </li>
 </ul>
 </p>
