Added ICML paper

--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -80,14 +80,14 @@ home page</font></a></p>
 <br>K. C. Wang and M. K. Reiter
 <br>In <i>Proceedings of the 29th USENIX Security Symposium</i>, August 2020.
 </li>
+-->
 
-<li><b>Defense through diverse directions</b>
+<li><b><a name="2020"><a href="./2020/ICML.pdf">Defense through diverse directions</a></a></b>
 <br>C. M. Bender, Y. Li, Y. Shi, M. K. Reiter, and J. B. Oliva
 <br>In <i>Proceedings of the 37th International Conference on Machine Learning</i>, July 2020.
 </li>
--->
 
-<li><b><a name="2020"><a href="./2020/SACMAT.pdf">Metering graphical data leakage with Snowman</a></a></b>
+<li><b><a href="./2020/SACMAT.pdf">Metering graphical data leakage with Snowman</a></b>
 <br>Q. Xiao, B. Subialdea, L. Bauer, and M. K. Reiter
 <br>In <i>Proceedings of the 25th ACM Symposium on Access Control Models and Technologies</i>, June 2020.
 <font size="-1"><a href="https://doi.org/10.1145/3381991.3395598">doi:10.1145/3381991.3395598</a></font>
