--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -101,7 +101,7 @@ href="../vita.pdf">my curriculum vitae</a> for a complete list.
 <a href="#ICDCS">ICDCS</a>
 <br><a href="#ICICS">ICICS</a>
 <br><a href="#ICISS">ICISS</a>
-<!-- <br><a href="#ICML">ICML</a> -->
+<br><a href="#ICML">ICML</a>
 <br><a href="#ICNP">ICNP</a>
 <br><a href="#IandC">I&C</a>
 <br><a href="#IJIS">IJIS</a>
@@ -1794,17 +1794,15 @@ in Computer Science 5905, pages 132&#8211;147.
 </td></tr>
 </table></p>
 
-<!--
 <hr>
 
 <p><b><i><a name="ICML">International Conference on Machine Learning (ICML)</a></i></b>
 <table border=0 cellpadding=3>
 <tr valign=top><td>2020</td>
-<td><b>Defense through diverse directions</b>
+<td><b><a href="./2020/ICML.pdf">Defense through diverse directions</a></b>
 <br>C. M. Bender, Y. Li, Y. Shi, M. K. Reiter, and J. B. Oliva
 </td></tr>
 </table></p>
--->
 
 <hr>
 
