--- a/students.html
+++ b/students.html
@@ -132,9 +132,12 @@ PhD thesis research (but not as their official advisors).
 PhD, 2009.</li>
 <li><a href="http://www.linkedin.com/in/garthgoodson">Garth Goodson</a>, PhD,
 2004.</li>
+<li><a href="https://www.linkedin.com/in/qatrunnada-ismail/">Qatrunnada Ismail</a>, PhD, 2018.</li>
 <li><a href="http://www.cs.unc.edu/~fabian/">Fabian Monrose</a>,
 PhD, 1999.</li>
 <li><a href="http://www.robreeder.com/">Rob Reeder</a>, PhD, 2008.</li>
+<li><a href="https://www.linkedin.com/in/mahmood-sharif">Mahmood Sharif</a>,
+PhD, 2019.</li>
 <li><a href="http://www.linkedin.com/in/kamivaniea/">Kami Vaniea</a>, PhD, 2012.</li>
 <li><a href="http://www.informatics.indiana.edu/xw7">XiaoFeng
 Wang</a>, PhD, 2004.</li>
@@ -142,8 +145,6 @@ Wang</a>, PhD, 2004.</li>
 Wylie</a>, PhD, 2005.</li>
 <li><a href="https://www.linkedin.com/pub/yinglian-xie/2/981/724">Yinglian
 Xie</a>, PhD, 2005.</li>
-<li><a href="https://www.linkedin.com/in/mahmood-sharif">Mahmood Sharif</a>,
-PhD, 2019.</li>
 </ul>
 </p>
 
