Major page upgrade

--- a/index.html
+++ b/index.html
@@ -1,59 +1,123 @@
-<HTML>
-<HEAD><TITLE>Michael Reiter's Home Page</TITLE></HEAD>
-<BODY bgcolor="white" text="black">
-<table cellpadding=5>
-<tr>
-  <td valign="center" rowspan=3>
-    <img src="./pictures/mike-wbg-h175.jpg">
-  </td>
-  <td valign="top" colspan=2>
-    <font size="+3"><b>Michael Reiter</b></font>
-  </td>
-</tr>
-<tr>
-  <td valign="top" colspan=2>
-    <a href="https://www.legacy.com/obituaries/newsobserver/obituary.aspx?n=lawrence-slifkin&pid=194628410">Lawrence M. Slifkin</a> Distinguished Professor<br>
-    <a href="http://www.cs.unc.edu/">Department of Computer Science</a><br>
-    <a href="http://www.unc.edu/">University of North Carolina at Chapel Hill</a>
-  </td>
-</tr>
-<tr>
-  <td valign="top">
-    <a href="./contact.html">Contact</a><br>
-    <a href="./bio.html">Biography</a><br>
-    <a href="./vita.pdf">Curriculum vitae</a>
-  </td>
-  <td valign="top">
-    <!-- Courses [<a href="./courses/spr2019/">Spring 2019</a>] -->
-    <br>
-    Publications [<a href="./papers/byYear.html">by year</a>, <a href="./papers/byForum.html">by forum</a>]<br>
-    PhD students [<a href="./students.html#past">past</a>, <a href="./students.html#present">present</a>, <a href="./students.html#future">future</a>]
-  </td>
-</tr>
-<tr>
-  <td colspan=4>
-  <center><img src="./wordle-20140901.png" width="600">
-  <br><font size="-2"><a href="http://www.wordle.net">Wordle</a> representation of paper titles</font><center>
-  </td>
-</tr>
-</table>
+<html>
+  <head>
+    <link rel="stylesheet" href="./css/main.css">
+    <script src="https://kit.fontawesome.com/7057ffd65a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/academicons.min.css"/>
+    <title>Michael Reiter's Home Page</title>
+  </head>
 
+  <body bgcolor="white" text="black">
+    <table cellpadding=0>
+      <tr>
+	<td valign="center" style="padding:0 10px 0 0"rowspan=3>
+	  <img src="./pictures/HighResDHSST-8315-medium-slate.jpg" height=250px>
+	  <!-- <img src="./pictures/mike-wbg-h175.jpg"> -->
+	</td>
+	<td valign="top">
+	  <font size="+3"><b>Michael Reiter</b></font><br>
+	  <strong><a href="https://www.legacy.com/obituaries/newsobserver/obituary.aspx?n=lawrence-slifkin&pid=194628410">Lawrence M. Slifkin</a> Distinguished Professor<br>
+	  <a href="http://www.cs.unc.edu/">Department of Computer Science</a><br>
+	  <a href="http://www.unc.edu/">University of North Carolina at Chapel Hill</a><br>&nbsp;</strong>
+	</td>
+      </tr>
+      <tr>
+	<td valign="top">
+	  <div class="frame">
+	    <table>
+	      <tr>
+		<td style="text-align:center; padding:0 5px 0 5px"><a href="mailto:reiter@cs.unc.edu"><span class="fas fa-envelope fa-2x"></span></a></td>
+		<td style="text-align:center; padding:0 5px 0 5px"><a href="./contact.html"><span class="fas fa-map-marker fa-2x"></span></a></td></tr>
+	      <tr>
+		<td colspan=2 style="text-align:center">contact</td>
+	      </table>
+	  </div>
+	  <div class="frame">
+	    <table>
+	      <tr>
+		<td style="text-align:center; padding:0 5px 0 5px"><a href="./vita.pdf"><span class="ai ai-cv ai-2x"></span></a></td>
+		<td style="text-align:center; padding:0 5px 0 5px"><a href="./bio.html"><span class="fas fa-history fa-2x"></span></a></td>
+		<td style="text-align:center; padding:0 5px 0 5px"><a href="https://scholar.google.com/citations?user=GaRxukMAAAAJ&hl=en"><span class="ai ai-google-scholar ai-2x"></span></a></td>
+	      </tr>
+	      <tr>
+		<td colspan=3 style="text-align:center">info</td>
+	      </tr>
+	    </table>
+	  </div>
+	  <div class="frame">
+	    <table>
+	      <tr><td style="text-align:center; padding:0 5px 0 5px"><span class="fas fa-chalkboard-teacher fa-2x"></span></td></tr>
+	      <tr><td style="text-align:center">fall 2020</td></tr>
+	    </table>
+	  </div>
+	</td>
+      </tr>
+      <tr>
+	<td>
+	  <div class="frame">
+	    <table>
+	      <tr>
+		<td style="text-align:center; padding:0 5px 0 5px"><a href="papers/byYear.html"><span class="fas fa-paperclip fa-2x"></span></a></td>
+		<td style="text-align:center; padding:0 5px 0 5px"><a href="papers/byForum.html"><span class="fas fa-paperclip fa-2x"></span></a>
+	      </tr>
+	      <tr>
+		<td style="text-align:center; padding:0 5px 0 5px">by year</td>
+		<td style="text-align:center; padding:0 5px 0 5px">by forum</td>
+	      </tr>
+	    </table>
+	  </div>
+	  <div class="frame">
+	    <table>
+	      <tr>
+		<td style="text-align:center; padding:0 5px 0 5px"><a href="./students.html#present"><span class="fas fa-user-graduate fa-2x"></span></a></td>
+		<td style="text-align:center; padding:0 5px 0 5px"><a href="./students.html#past"><span class="fas fa-user-graduate fa-2x"></span></a></td>
+		<td style="text-align:center; padding:0 5px 0 5px"><a href="./students.html#future"><span class="fas fa-user-graduate fa-2x"></span></a></td>
+	      </tr>
+	      <tr>
+		<td style="text-align:center; padding:0 5px 0 5px">present</td>
+		<td style="text-align:center; padding:0 5px 0 5px">past</td>
+		<td style="text-align:center; padding:0 5px 0 5px">future</td>
+	      </tr>
+	    </table>
+	  </div>
+	</td>
+      </tr>
+    </table>
 
-<H2>Announcements</H2>
+    <table style="margin-top:1cm;">
+      <tr valign=top><td width=300px>
+	  <h2>Research interests</h2>
+	  <p>
+	    <ul>
+	    <li>Computer and network security</li>
+	    <li>Blockchains and Byzantine fault-tolerant distributed
+	    systems</li>
+	    <li>Applied cryptography</li>
+	    </ul>
+	  </p>
+	  
+	  <h2 style="margin-top:1.5cm;">Announcements</h2>
 
-<p>I usually have openings in my group for new Ph.D. students.  Please
-read <a href="./students.html#future">this</a> if you are interested
-in applying.
+	  <p>I usually have openings in my group for new
+	    Ph.D. students.  Please
+	    read <a href="./students.html#future">this</a> if you are
+	    interested in applying.
+	  </p>
+      </td>
+      <td>
+	  <center><img src="./wordcloud.jpg" width=250px>
+	    <br><font size="-2"><a href="http://www.wordclouds.com">Wordcloud</a> of paper titles</font></center>
+      </td></tr>
+    </table>
 
-<H2>Advertisements</H2>
+    <h2>Advertisements</h2>
 
-<p>Here are some upcoming conferences in which I'm somehow involved.
+    <p>Here are some upcoming conferences in which I'm somehow involved.
 
-<ul>
-<li><a href="https://petsymposium.org/index.php">20th Privacy Enhancing Technologies Symposium</a></li>
-<li><a href="https://www.sigsac.org/ccs/CCS2020/">27th ACM Conference on Computer and Communications Security</a></li>
-</ul>
-</p>
-
-</BODY>
-</HTML>
+      <ul>
+	<li><a href="https://petsymposium.org/index.php">20th Privacy Enhancing Technologies Symposium</a></li>
+	<li><a href="https://www.sigsac.org/ccs/CCS2020/">27th ACM Conference on Computer and Communications Security</a></li>
+      </ul>
+    </p>
+    
+  </body>
+</html>
