--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1,7 +1,10 @@
 <html>
-<head>
-<title>Michael Reiter :: Selected Publications by Forum</title>
-</head>
+
+  <head>
+    <link rel="stylesheet" href="../css/main.css">
+    <title>Michael Reiter :: Selected Publications by Forum</title>
+  </head>
+  
 <body>
 <a name="top"><h2>Michael Reiter :: Selected Publications by Forum</h2></a>
 <p>
