--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,11 @@
 <html>
-<head>
-<title>Michael Reiter :: Contact information</title>
-</head>
+  <head>
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Michael Reiter :: Contact Information</title>
+  </head>
+  
 <body>
-<h2>Michael Reiter :: Contact information</h2>
+<h2>Michael Reiter :: Contact Information</h2>
 
 <p>
 <a href="http://www.cs.unc.edu">Department of Computer Science</a><br>
@@ -13,9 +15,6 @@ Chapel Hill, North Carolina 27599&#8211;3175<br>
 <br>
 <a href="http://www.cs.unc.edu/cms/about-us/about-us/directions-and-other-visitor-information">directions</a>,
 <a href="http://www.maps.unc.edu/">campus maps</a>
-</p>
-<p>
-email: <a href="mailto:reiter@cs.unc.edu">reiter@cs.unc.edu</a>
 </p>
 <p>
 <a href="./index.html"><font size="-2">Back to
