--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -1,10 +1,13 @@
 <html>
-<style type="text/css">
-li {margin-bottom: 1em}
-</style>
-<head>
-<title>Michael Reiter :: Selected Publications by Year</title>
-</head>
+  <style type="text/css">
+    li {margin-bottom: 1em}
+  </style>
+
+  <head>
+    <link rel="stylesheet" href="../css/main.css">
+    <title>Michael Reiter :: Selected Publications by Year</title>
+  </head>
+  
 <body>
 <a name="top"><h2>Michael Reiter :: Selected Publications by Year</h2></a>
 <p>
