--- a/students.html
+++ b/students.html
@@ -1,7 +1,9 @@
 <html>
-<head>
-<title>Michael Reiter :: PhD students</title>
-</head>
+  <head>
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Michael Reiter :: PhD students</title>
+  </head>
+  
 <body>
 <h2>Michael Reiter :: PhD students</h2>
 <hr>
