--- a/papers/copyright.html
+++ b/papers/copyright.html
@@ -1,7 +1,9 @@
 <html>
-<head>
-<title>Michael Reiter :: Selected Publications :: Copyright Information</title>
-</head>
+  <head>
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Michael Reiter :: Selected Publications :: Copyright Information</title>
+  </head>
+
 <body>
 
 <a name="acm"><h2>For ACM copyrighted works</h2></a>
