--- a/papers/copyright.html
+++ b/papers/copyright.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Michael Reiter :: Selected Publications :: Copyright Information</title>
   </head>
 
