More icons, and polishing

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="./css/main.css">
+    <script src="https://kit.fontawesome.com/7057ffd65a.js" crossorigin="anonymous"></script>
     <title>Michael Reiter :: Contact Information</title>
   </head>
   
@@ -16,10 +17,8 @@ Chapel Hill, North Carolina 27599&#8211;3175<br>
 <a href="http://www.cs.unc.edu/cms/about-us/about-us/directions-and-other-visitor-information">directions</a>,
 <a href="http://www.maps.unc.edu/">campus maps</a>
 </p>
-<p>
-<a href="./index.html"><font size="-2">Back to
-Michael Reiter's home page</font></a>
-</p>
+
+<p><a href="./index.html"><span class="fas fa-home fa-1x"></span></a></p>
 
 </body>
 </html>
