--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <body bgcolor="white" text="black">
     <table cellpadding=0>
       <tr>
-	<td valign="center" style="padding:0 10px 0 0"rowspan=3>
-	  <img src="./pictures/HighResDHSST-8315-medium-slate.jpg" height=250px>
-	  <!-- <img src="./pictures/mike-wbg-h175.jpg"> -->
+	<td valign="top" style="padding:0 10px 0 0"rowspan=3>
+	  <center>
+	    <img src="./pictures/HighResDHSST-8315-medium-slate.jpg" height=240px>
+	    <br><strong>External view</strong>
+	  </center>
 	</td>
 	<td valign="top">
 	  <font size="+3"><b>Michael Reiter</b></font><br>
@@ -105,7 +107,8 @@
       </td>
       <td>
 	  <center><img src="./wordcloud.jpg" width=250px>
-	    <br><font size="-2"><a href="http://www.wordclouds.com">Wordcloud</a> of paper titles</font></center>
+	    <br><strong>Internal view</strong>
+	    <br><font size="-2">(<a href="http://www.wordclouds.com">Wordcloud</a> of my paper titles)</font></center>
       </td></tr>
     </table>
 
