--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2,6 +2,7 @@
 
   <head>
     <link rel="stylesheet" href="../css/main.css">
+    <script src="https://kit.fontawesome.com/7057ffd65a.js" crossorigin="anonymous"></script>
     <title>Michael Reiter :: Selected Publications by Forum</title>
   </head>
   
@@ -181,8 +182,7 @@ href="../vita.pdf">my curriculum vitae</a> for a complete list.
 </tr>
 </table>
 
-<p><a href="../index.html"><font size="-2">Back to Michael Reiter's
-home page</font></a></p>
+<p><a href="../index.html"><span class="fas fa-home fa-1x"></span></a></p>
 
 <hr>
 
@@ -2328,8 +2328,8 @@ payment schemes</a></b>
 
 <hr>
 
-<p><a href="./byForum.html#top"><font size="-2">Back to top</font></a><br>
-<a href="../index.html"><font size="-2">Back to Michael Reiter's
-home page</font></a></p>
+<p><a href="./byYear.html#top"><span class="fas fa-arrow-up fa-1x"></span></a>
+  &nbsp; <a href="../index.html"><span class="fas fa-home fa-1x"></span></a>
+</p>
 </body>
 </html>
