--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -5,6 +5,7 @@
 
   <head>
     <link rel="stylesheet" href="../css/main.css">
+    <script src="https://kit.fontawesome.com/7057ffd65a.js" crossorigin="anonymous"></script>
     <title>Michael Reiter :: Selected Publications by Year</title>
   </head>
   
@@ -71,8 +72,7 @@ href="../vita.pdf">my curriculum vitae</a> for a complete list.
 </tr></table>
 </p>
 
-<p><a href="../index.html"><font size="-2">Back to Michael Reiter's
-home page</font></a></p>
+<p><a href="../index.html"><span class="fas fa-home fa-1x"></span></a></p>
 
 <hr>
 
@@ -2124,8 +2124,8 @@ href="http://dx.doi.org/10.1109/RISP.1992.213273">doi:10.1109/RISP.1992.213273</
 </li>
 </ul>
 
-<p><a href="./byYear.html#top"><font size="-2">Back to top</font></a><br>
-<a href="../index.html"><font size="-2">Back to Michael Reiter's
-home page</font></a></p>
+<p><a href="./byYear.html#top"><span class="fas fa-arrow-up fa-1x"></span></a>
+  &nbsp; <a href="../index.html"><span class="fas fa-home fa-1x"></span></a>
+</p>
 </body>
 </html>
