--- a/students.html
+++ b/students.html
@@ -1,36 +1,43 @@
 <html>
   <head>
     <link rel="stylesheet" href="./css/main.css">
-    <title>Michael Reiter :: PhD students</title>
+    <script src="https://kit.fontawesome.com/7057ffd65a.js" crossorigin="anonymous"></script>
+    <title>Michael Reiter :: PhD Students</title>
   </head>
   
 <body>
-<h2>Michael Reiter :: PhD students</h2>
+<h2>Michael Reiter :: Ph.D. Students</h2>
 <hr>
 <h3><a name="future">Future students</a></h3>
 <p>
-If you are interested in joining my research group as a PhD student, a
-formal application to the <a href="http://www.cs.unc.edu">Department
-of Computer Science</a> is a necessary first step; see the the <a
-href="http://www.cs.unc.edu/Admissions">Graduate Admissions page</a>
-for more information.  You are welcome to send me email to introduce
-yourself, but do not be discouraged if I do not respond; I might just
-be putting off applications until the usual internal decision-making
-schedule.  I will do my best to look at all applications that
+  I plan to transition to a faculty position
+  at <a href="https://www.duke.edu">Duke University</a> in January
+  2021, and so I am no longer accepting Ph.D. students at UNC.  If you
+  are interested in joining my new research group at Duke as a Ph.D.
+  student, a formal application to
+  the <a href="https://www.cs.duke.edu/">Department of Computer
+  Science</a> or <a href="https://www.ece.duke.edu">Department of
+  Electrical and Computer Engineering</a> is a necessary first step.
+  Please see the
+  <a href="https://gradschool.duke.edu/admissions/application-instructions">graduate
+  application instructions</a> for more information.  You are welcome
+  to send me email to introduce yourself, but do not be discouraged if
+  I do not respond; I might just be putting off applications until the
+  usual internal decision-making schedule.  I will do my best to look
+  at all applications that
 <strong>indicate me as a potential advisor</strong>.  Evidence of
 research aptitude (projects, publications, or even just well-formed
 thoughts about your research interests) will strengthen your
 application substantially.
 </p>
 <p>
-<a href="./index.html"><font size="-2">Back to
-Michael Reiter's home page</font></a>
+<a href="./index.html"><span class="fas fa-home fa-1x"></span></a>
 </p>
 
 <hr>
 
 <h3><a name="present">Present students</a></h3>
-<p> I currently advise the following PhD students:
+<p> I currently advise the following Ph.D. students:
 <ul>
 <li>Andrew Chi</li>
 <li>Chris Dean</li>
@@ -43,84 +50,83 @@ Michael Reiter's home page</font></a>
 </p>
 
 <p>
-<a href="./index.html"><font size="-2">Back to
-Michael Reiter's home page</font></a>
+<a href="./index.html"><span class="fas fa-home fa-1x"></span></a>
 </p>
 
 <hr>
 
 <h3><a name="past">Past students</a></h3>
 <p>
-The following students have completed a PhD under my supervision.
+The following students have completed a Ph.D. under my supervision.
 <ul>
-<li><a href="http://www.linkedin.com/pub/michael-abd-el-malek/0/380/300">Michael Abd-El-Malek</a>, PhD, 2010.
+<li><a href="http://www.linkedin.com/pub/michael-abd-el-malek/0/380/300">Michael Abd-El-Malek</a>, Ph.D., 2010.
 <br>Thesis: <i><a href="./theses/abd-el-malek.pdf">File System Virtual Appliances</a></i>
 </li>
-<li><a href="https://www.linkedin.com/pub/darrell-bethea/103/a06/158">Darrell Bethea</a>, PhD, 2015.
+<li><a href="https://www.linkedin.com/pub/darrell-bethea/103/a06/158">Darrell Bethea</a>, Ph.D., 2015.
 <br>Thesis: <i><a href="https://doi.org/10.17615/rh2k-q093">WACCO and LOKO: Strong Consistency at Global Scale</a></i>
 </li>
-<li><a href="https://www.linkedin.com/in/robertacochran">Robby Cochran</a>, PhD, 2016.
+<li><a href="https://www.linkedin.com/in/robertacochran">Robby Cochran</a>, Ph.D., 2016.
 <br>Thesis: <i><a href="https://doi.org/10.17615/2pdv-3313">Symbolic Verification of Remote Client Behavior in Distributed Systems</a></i>
 </li>
 <li><a href="http://www.linkedin.com/in/mpcollins">Michael Collins</a>,
-PhD, 2008.
+Ph.D., 2008.
 <br>Thesis: <i><a href="./theses/collins.pdf">A Protocol Graph
 Based Anomaly Detection System</a></i>
 </li>
-<li><a href="http://flyer.sis.smu.edu.sg/">Debin Gao</a>, PhD, 2007.
+<li><a href="http://flyer.sis.smu.edu.sg/">Debin Gao</a>, Ph.D., 2007.
 <br>Thesis: <i><a href="./theses/gao.pdf">Gray-box Anomaly
 Detection Using System Call Monitoring</a></i>
 </li>
 <li><a href="https://www.linkedin.com/in/scott-garriss-7112876">Scott Garriss</a>,
-PhD, 2008.
+Ph.D., 2008.
 <br>Thesis: <i><a href="./theses/garriss.pdf">Efficient, Usable
 Proof-Construction Strategies for Distributed Access-Control Systems</a></i>
 </li>
-<li><a href="http://www.linkedin.com/in/jameshendricks">James Hendricks</a>, PhD, 2009.
+<li><a href="http://www.linkedin.com/in/jameshendricks">James Hendricks</a>, Ph.D., 2009.
 <br>Thesis: <i><a href="./theses/hendricks.pdf">Efficient Byzantine Fault Tolerance for Scalable Storage and Services</a></i>
 </li>
-<li><a href="https://progwriter.github.io">Victor Heorhiadi</a>, PhD, 2017.
+<li><a href="https://progwriter.github.io">Victor Heorhiadi</a>, Ph.D., 2017.
 <br>Thesis: <i><a href="https://doi.org/10.17615/hwdy-sa92">Expression and Composition of Optimization-Based Applications for Software-Defined Networking</a></i>
 </li>
-<li><a href="https://www.linkedin.com/pub/peng-li/74/b77/7b0">Peng Li</a>, PhD, 2014.
+<li><a href="https://www.linkedin.com/pub/peng-li/74/b77/7b0">Peng Li</a>, Ph.D., 2014.
 <br>Thesis: <i><a href="https://doi.org/10.17615/a806-4792">Replication and Placement for Security in Distributed Systems</a></i>
 </li>
-<li><a href="http://www.linkedin.com/in/jonmccune/">Jonathan McCune</a>, PhD, 2009.
+<li><a href="http://www.linkedin.com/in/jonmccune/">Jonathan McCune</a>, Ph.D., 2009.
 <br>Thesis: <i><a href="./theses/mccune.pdf">Reducing the Trusted Computing Base for Applications on Commodity Systems</a></i>
 </li>
-<li><a href="https://www.linkedin.com/in/michael-merideth/">Michael Merideth</a>, PhD, 2009.
+<li><a href="https://www.linkedin.com/in/michael-merideth/">Michael Merideth</a>, Ph.D., 2009.
 <br>Thesis: <i><a href="./theses/merideth.pdf">Efficient Survivability for Highly Replicated Services</a></i>
 </li>
-<li><a href="http://www.ccs.neu.edu/home/alina/index.html">Alina Oprea</a>, PhD, 2007.
+<li><a href="http://www.ccs.neu.edu/home/alina/index.html">Alina Oprea</a>, Ph.D., 2007.
 <br>Thesis: <i><a href="./theses/aoprea.pdf">Efficient Cryptographic
 Techniques for Securing Storage Systems</a></i>
 </li>
 <li><a href="http://www.linkedin.com/pub/florin-oprea/1/829/b6">Florian
-Oprea</a>, PhD, 2008.
+Oprea</a>, Ph.D., 2008.
 <br>Thesis: <i><a href="./theses/foprea.pdf">Quorum Placement on
 Wide-Area Networks</a></i>
 </li>
-<li><a href="http://uk.linkedin.com/pub/asad-samar/0/ba8/7b8/">Asad Samar</a>, PhD, 2006.
+<li><a href="http://uk.linkedin.com/pub/asad-samar/0/ba8/7b8/">Asad Samar</a>, Ph.D., 2006.
 <br>Thesis: <i><a href="./theses/samar.pdf">Quiver on the Edge:
 Consistent Scalable Edge Services</a></i>
 </li>
-<li><a href="http://users.ece.cmu.edu/~vsekar/">Vyas Sekar</a>, PhD, 2010.
+<li><a href="http://users.ece.cmu.edu/~vsekar/">Vyas Sekar</a>, Ph.D., 2010.
 <br>Thesis: <i><a href="./theses/sekar.pdf">Effective Network Management
 via System-Wide Coordination and Optimization</a></i>
 </li>
-<li><a href="http://www.linkedin.com/pub/lei-wei/2a/155/b65/">Lei Wei</a>, PhD, 2013.
+<li><a href="http://www.linkedin.com/pub/lei-wei/2a/155/b65/">Lei Wei</a>, Ph.D., 2013.
 <br>Thesis: <i><a href="https://doi.org/10.17615/kv0e-4e39">Privacy-Preserving Regular Expression Evaluation on Encrypted Data</a></i></li>
-<li><a href="https://www.linkedin.com/in/qiuyuxiao/">Qiuyu Xiao</a>, PhD, 2019.
+<li><a href="https://www.linkedin.com/in/qiuyuxiao/">Qiuyu Xiao</a>, Ph.D., 2019.
 <br>Thesis: <i><a href="https://doi.org/10.17615/ph84-bj53">Efficient Data Protection by Noising, Masking, and Metering</a></i></li>
-<li><a href="http://www.linkedin.com/pub/ting-fang-yen/32/4a0/20b">Ting-Fang Yen</a>, PhD, 2011.
+<li><a href="http://www.linkedin.com/pub/ting-fang-yen/32/4a0/20b">Ting-Fang Yen</a>, Ph.D., 2011.
 <br>Thesis: <i><a href="./theses/yen.pdf">Detecting Stealthy Malware Using Behavioral Features in Network Traffic</a></i>
 </li>
 
-<li><a href="http://web.cse.ohio-state.edu/~yinqian/">Yinqian Zhang</a>, PhD, 2014.
+<li><a href="http://web.cse.ohio-state.edu/~yinqian/">Yinqian Zhang</a>, Ph.D., 2014.
 <br>Thesis: <i><a href="https://doi.org/10.17615/xt8k-ee40">Cache-Based Side-Channel Attacks in Multi-Tenant Public Clouds and Their Countermeasures</a></i>
 </li>
 
-<li><a href="https://www.linkedin.com/in/ziqiao-zhou-a02b9b78/">Ziqiao Zhou</a>, PhD, 2020.
+<li><a href="https://www.linkedin.com/in/ziqiao-zhou-a02b9b78/">Ziqiao Zhou</a>, Ph.D., 2020.
 <br>Thesis: <i>Evaluating Information Leakage by Quantitative and Interpretable Measurements</i>
 </li>
 </ul>
@@ -128,31 +134,30 @@ via System-Wide Coordination and Optimization</a></i>
 
 <p>
 I have also worked closely with several other students on their
-PhD thesis research (but not as their official advisors).
+Ph.D. thesis research (but not as their official advisors).
 <ul>
 <li><a href="http://www.scottcoull.com/">Scott Coull</a>,
-PhD, 2009.</li>
-<li><a href="http://www.linkedin.com/in/garthgoodson">Garth Goodson</a>, PhD,
+Ph.D., 2009.</li>
+<li><a href="http://www.linkedin.com/in/garthgoodson">Garth Goodson</a>, Ph.D.,
 2004.</li>
-<li><a href="https://www.linkedin.com/in/qatrunnada-ismail/">Qatrunnada Ismail</a>, PhD, 2018.</li>
+<li><a href="https://www.linkedin.com/in/qatrunnada-ismail/">Qatrunnada Ismail</a>, Ph.D., 2018.</li>
 <li><a href="http://www.cs.unc.edu/~fabian/">Fabian Monrose</a>,
-PhD, 1999.</li>
-<li><a href="http://www.robreeder.com/">Rob Reeder</a>, PhD, 2008.</li>
+Ph.D., 1999.</li>
+<li><a href="http://www.robreeder.com/">Rob Reeder</a>, Ph.D., 2008.</li>
 <li><a href="https://www.linkedin.com/in/mahmood-sharif">Mahmood Sharif</a>,
-PhD, 2019.</li>
-<li><a href="http://www.linkedin.com/in/kamivaniea/">Kami Vaniea</a>, PhD, 2012.</li>
+Ph.D., 2019.</li>
+<li><a href="http://www.linkedin.com/in/kamivaniea/">Kami Vaniea</a>, Ph.D., 2012.</li>
 <li><a href="http://www.informatics.indiana.edu/xw7">XiaoFeng
-Wang</a>, PhD, 2004.</li>
+Wang</a>, Ph.D., 2004.</li>
 <li><a href="http://www.linkedin.com/in/jayjwylie/">Jay
-Wylie</a>, PhD, 2005.</li>
+Wylie</a>, Ph.D., 2005.</li>
 <li><a href="https://www.linkedin.com/pub/yinglian-xie/2/981/724">Yinglian
-Xie</a>, PhD, 2005.</li>
+Xie</a>, Ph.D., 2005.</li>
 </ul>
 </p>
 
 <p>
-<a href="./index.html"><font size="-2">Back to
-Michael Reiter's home page</font></a>
+<a href="./index.html"><span class="fas fa-home fa-1x"></span></a>
 </p>
 
 </body>
