Added USENIX paper

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2219,7 +2219,7 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <table border=0 cellpadding=3>
 
 <tr valign=top><td>2020</td>
-<td><b>Detecting stuffing of a user's credentials at her own accounts</b>
+<td><b><a href="./2020/USENIX.pdf">Detecting stuffing of a user's credentials at her own accounts</a></b>
 <br>K. C. Wang and M. K. Reiter
 </td></tr>  
   
