--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -78,14 +78,12 @@ href="../vita.pdf">my curriculum vitae</a> for a complete list.
 
 <ul>
 
-<!--
-<li><b>Detecting stuffing of a user’s credentials at her own accounts</b>
+<li><b><a name="2020"><a href="./2020/USENIX.pdf">Detecting stuffing of a user’s credentials at her own accounts</a></a></b>
 <br>K. C. Wang and M. K. Reiter
 <br>In <i>Proceedings of the 29th USENIX Security Symposium</i>, August 2020.
 </li>
--->
 
-<li><b><a name="2020"><a href="./2020/ICML.pdf">Defense through diverse directions</a></a></b>
+<li><b><a href="./2020/ICML.pdf">Defense through diverse directions</a></b>
 <br>C. M. Bender, Y. Li, Y. Shi, M. K. Reiter, and J. B. Oliva
 <br>In <i>Proceedings of the 37th International Conference on Machine Learning</i>, July 2020.
 </li>
