--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="../css/main.css">
     <script src="https://kit.fontawesome.com/7057ffd65a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/academicons.min.css"/>
     <title>Michael Reiter :: Selected Publications by Forum</title>
   </head>
   
@@ -16,17 +17,20 @@ information are expected to adhere to the terms and constraints
 invoked by each author's copyright. In most cases, these works may not
 be reposted without the explicit permission of the copyright holder.
 </p>
-<p>
-  Some bibliometrics for these papers can be found at
-  <a href="https://scholar.google.com/citations?user=GaRxukMAAAAJ&hl=en">Google Scholar</a>
-  and the <a href="http://dl.acm.org/author_page.cfm?id=81387594159">ACM Digital
-Library</a>.
-</p>
-<p>
-This is not a complete list of my publications.  Please see <a
-href="../vita.pdf">my curriculum vitae</a> for a complete list.
-</p>
 
+<div class="frame">
+  <table>
+    <tr>
+      <td style="text-align:center; padding:0 5px 0 5px"><a href="https://scholar.google.com/citations?user=GaRxukMAAAAJ&hl=en"><span class="ai ai-google-scholar ai-2x"></span></a></td>
+      <td style="text-align:center; padding:0 5px 0 5px"><a href="http://dl.acm.org/author_page.cfm?id=81387594159"><span class="ai ai-acmdl fa-2x"></span></a></td>
+    </tr>
+    <tr>
+      <td colspan=3 style="text-align:center">bibliometrics</td>
+    </tr>
+  </table>
+</div>
+
+<p>
 <table>
 <tr align="center" valign="top">
 <th width="5.8%">A</th>
@@ -181,6 +185,7 @@ href="../vita.pdf">my curriculum vitae</a> for a complete list.
 </font></td>
 </tr>
 </table>
+</p>
 
 <p><a href="../index.html"><span class="fas fa-home fa-1x"></span></a></p>
 
