Updated page title

--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,11 @@
   <head>
     <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/7057ffd65a.js" crossorigin="anonymous"></script>
-    <title>Michael Reiter :: Contact Information</title>
+    <title>Michael Reiter :: Work Address and Directions</title>
   </head>
   
 <body>
-<h2>Michael Reiter :: Contact Information</h2>
+<h2>Michael Reiter :: Work Address and Directions</h2>
 
 <p>
 <a href="http://www.cs.unc.edu">Department of Computer Science</a><br>
