Centered index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body bgcolor="white" text="black">
+  <div class="content">
     <table cellpadding=0>
       <tr>
 	<td valign="top" style="padding:0 10px 0 0"rowspan=3>
@@ -121,6 +122,6 @@
 	<li><a href="https://www.sigsac.org/ccs/CCS2020/">27th ACM Conference on Computer and Communications Security</a></li>
       </ul>
     </p>
-    
+  </div>
   </body>
 </html>
