--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
 
   <body bgcolor="white" text="black">
-  <div class="content">
+  <div class="centervh">
     <table cellpadding=0>
       <tr>
-	<td valign="top" style="padding:0 10px 0 0"rowspan=3>
+	<td valign="top" style="padding:0 10px 0 0" rowspan=3>
 	  <center>
 	    <img src="./pictures/HighResDHSST-8315-medium-slate.jpg" height=240px>
 	    <br><strong>External view</strong>
