--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -8,6 +8,7 @@
   </head>
   
 <body>
+<div class="centerh">
 <a name="top"><h2>Michael Reiter :: Selected Publications by Forum</h2></a>
 <p>
 This material is presented to ensure timely dissemination of scholarly
@@ -2336,5 +2337,6 @@ payment schemes</a></b>
 <p><a href="./byYear.html#top"><span class="fas fa-arrow-up fa-1x"></span></a>
   &nbsp; <a href="../index.html"><span class="fas fa-home fa-1x"></span></a>
 </p>
+</div>
 </body>
 </html>
