--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -11,6 +11,7 @@
   </head>
   
 <body>
+<div class="centerh">
 <a name="top"><h2>Michael Reiter :: Selected Publications by Year</h2></a>
 <p>
 This material is presented to ensure timely dissemination of scholarly
@@ -2130,5 +2131,6 @@ href="http://dx.doi.org/10.1109/RISP.1992.213273">doi:10.1109/RISP.1992.213273</
 <p><a href="./byYear.html#top"><span class="fas fa-arrow-up fa-1x"></span></a>
   &nbsp; <a href="../index.html"><span class="fas fa-home fa-1x"></span></a>
 </p>
+</div>
 </body>
 </html>
