--- a/papers/copyright.html
+++ b/papers/copyright.html
@@ -1,11 +1,12 @@
 <html>
   <head>
     <link rel="stylesheet" href="../css/main.css">
+    <script src="https://kit.fontawesome.com/7057ffd65a.js" crossorigin="anonymous"></script>
     <title>Michael Reiter :: Selected Publications :: Copyright Information</title>
   </head>
 
 <body>
-
+<div class="centerh">
 <a name="acm"><h2>For ACM copyrighted works</h2></a>
 
 <p>This is the author's version of the work. It is posted here by
@@ -30,7 +31,7 @@ component of this work in other works must be obtained from the IEEE.
 <p>The original publication is available in SpringerLink at
 <a href="http://link.springer.de">http://link.springer.de</a>.</p>
 
-<p><a href="../index.html"><font size="-2">Back to Michael Reiter's
-home page</font></a></p>
+<p><a href="../index.html"><span class="fas fa-home fa-1x"></span></a></p>
+</div>
 </body>
 </html>
