--- a/students.html
+++ b/students.html
@@ -6,6 +6,7 @@
   </head>
   
 <body>
+<div class="centerh">
 <h2>Michael Reiter :: Ph.D. Students</h2>
 <hr>
 <h3><a name="future">Future students</a></h3>
@@ -160,5 +161,6 @@ Xie</a>, Ph.D., 2005.</li>
 <a href="./index.html"><span class="fas fa-home fa-1x"></span></a>
 </p>
 
+</div>
 </body>
 </html>
