--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   </head>
   
 <body>
+<div class="centerh">
 <h2>Michael Reiter :: Work Address and Directions</h2>
 
 <p>
@@ -20,5 +21,6 @@ Chapel Hill, North Carolina 27599&#8211;3175<br>
 
 <p><a href="./index.html"><span class="fas fa-home fa-1x"></span></a></p>
 
+</div>
 </body>
 </html>
