Right justified top part of page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	    <br><strong>External view</strong>
 	  </center>
 	</td>
-	<td valign="top">
+	<td valign="top" align="right">
 	  <font size="+3"><b>Michael Reiter</b></font><br>
 	  <strong><a href="https://www.legacy.com/obituaries/newsobserver/obituary.aspx?n=lawrence-slifkin&pid=194628410">Lawrence M. Slifkin</a> Distinguished Professor<br>
 	  <a href="http://www.cs.unc.edu/">Department of Computer Science</a><br>
@@ -24,7 +24,7 @@
 	</td>
       </tr>
       <tr>
-	<td valign="top">
+	<td valign="top" align="right">
 	  <div class="frame">
 	    <table>
 	      <tr>
@@ -55,7 +55,7 @@
 	</td>
       </tr>
       <tr>
-	<td>
+	<td valign="top" align="right">
 	  <div class="frame">
 	    <table>
 	      <tr>
