--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	    interested in applying.
 	  </p>
       </td>
-      <td>
+      <td align="right" width=300px>
 	  <center><img src="./wordcloud.jpg" width=250px>
 	    <br><strong>Internal view</strong>
 	    <br><font size="-2">(<a href="http://www.wordclouds.com">Wordcloud</a> of my paper titles)</font></center>
