Updated email address

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	  <div class="frame">
 	    <table>
 	      <tr>
-		<td style="text-align:center; padding:0 5px 0 5px"><a href="mailto:reiter@cs.unc.edu"><span class="fas fa-envelope fa-2x"></span></a></td>
+		<td style="text-align:center; padding:0 5px 0 5px"><a href="mailto:michael.reiter@duke.edu"><span class="fas fa-envelope fa-2x"></span></a></td>
 		<td style="text-align:center; padding:0 5px 0 5px"><a href="./contact.html"><span class="fas fa-map-marker fa-2x"></span></a></td></tr>
 	      <tr>
 		<td colspan=2 style="text-align:center">contact</td>
