--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2334,7 +2334,7 @@ payment schemes</a></b>
 
 <hr>
 
-<p><a href="./byYear.html#top"><span class="fas fa-arrow-up fa-1x"></span></a>
+<p><a href="./byForum.html#top"><span class="fas fa-arrow-up fa-1x"></span></a>
   &nbsp; <a href="../index.html"><span class="fas fa-home fa-1x"></span></a>
 </p>
 </div>
