--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     <p>Here are some upcoming conferences in which I'm somehow involved.
 
       <ul>
-	<li><a href="https://petsymposium.org/index.php">20th Privacy Enhancing Technologies Symposium</a></li>
-	<li><a href="https://www.sigsac.org/ccs/CCS2020/">27th ACM Conference on Computer and Communications Security</a></li>
+	<li><a href="https://www.usenix.org/conference/atc21">USENIX Annual Technical Conference (ATC) 2021</a></li>
+	<li><a href="https://esorics2021.athene-center.de">26th European Symposium on Research in Computer Security</a></li>
       </ul>
     </p>
   </div>
