Updated pointers to hotstuff implementations

--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -116,7 +116,7 @@ be reposted without the explicit permission of the copyright holder.
 <br>M. Yin, D. Malkhi, M. K. Reiter, G. G. Gueta, and I. Abraham    
 <br>In <i>Proceedings of the 38th ACM Symposium on Principles of Distributed Computing</i>, July 2019.
 <font size="-1"><a href="https://doi.org/10.1145/3293611.3331591">doi:10.1145/3293611.3331591</a></font>
-<br>Notes: Variants of this protocol have been adopted by <a href="https://developers.libra.org/docs/state-machine-replication-paper">Libra</a> and <a href="https://medium.com/@cypherium/what-is-hotstuff-and-why-is-it-a-big-deal-213f39696763">Cypherium</a>.  An <a href="https://github.com/hot-stuff/libhotstuff">example implementation</a> is available.
+<br>Notes: Variants of this protocol have been adopted by <a href="https://developers.libra.org/docs/crates/consensus">Libra</a> and <a href="https://medium.com/@cypherium/what-is-hotstuff-and-why-is-it-a-big-deal-213f39696763">Cypherium</a>.  An <a href="https://github.com/hot-stuff/libhotstuff">example implementation</a> is available, as is its implementation within the <a href="https://github.com/libra/libra">Libra codebase</a>.
 </li>
 
 <li><b><a href="./2019/DSN.pdf">SBFT: A scalable and decentralized trust infrastructure</a></b>
