Updated to Duke

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 	</td>
 	<td valign="top" align="right">
 	  <font size="+3"><b>Michael Reiter</b></font><br>
-	  <strong><a href="https://www.legacy.com/obituaries/newsobserver/obituary.aspx?n=lawrence-slifkin&pid=194628410">Lawrence M. Slifkin</a> Distinguished Professor<br>
-	  <a href="http://www.cs.unc.edu/">Department of Computer Science</a><br>
-	  <a href="http://www.unc.edu/">University of North Carolina at Chapel Hill</a><br>&nbsp;</strong>
+	  <strong>Professor, <a href="http://www.duke.edu/">Duke University</a><br>
+	    Departments of <a href="http://www.cs.duke.edu/">Computer Science</a> and<br>
+	    <a href="http://www.ece.duke.edu">Electrical & Computer Engineering</a><br>&nbsp;
+	  </strong>
 	</td>
       </tr>
       <tr>
@@ -49,7 +50,7 @@
 	  <div class="frame">
 	    <table>
 	      <tr><td style="text-align:center; padding:0 5px 0 5px"><span class="fas fa-chalkboard-teacher fa-2x"></span></td></tr>
-	      <tr><td style="text-align:center">fall 2020</td></tr>
+	      <tr><td style="text-align:center">spring 2021</td></tr>
 	    </table>
 	  </div>
 	</td>
