--- a/students.html
+++ b/students.html
@@ -11,11 +11,8 @@
 <hr>
 <h3><a name="future">Future students</a></h3>
 <p>
-  I plan to transition to a faculty position
-  at <a href="https://www.duke.edu">Duke University</a> in January
-  2021, and so I am no longer accepting Ph.D. students at UNC.  If you
-  are interested in joining my new research group at Duke as a Ph.D.
-  student, a formal application to
+  If you are interested in joining my new research group at Duke as a
+  Ph.D.  student, a formal application to
   the <a href="https://www.cs.duke.edu/">Department of Computer
   Science</a> or <a href="https://www.ece.duke.edu">Department of
   Electrical and Computer Engineering</a> is a necessary first step.
@@ -44,7 +41,7 @@ application substantially.
 <li>Chris Dean</li>
 <li><a href="https://www.linkedin.com/in/linan-gao-117b31191/">Linan Gao</a></li>
 <li>Adam Humphries</li>
-<li>Sheng Liu</li>
+<li>Zehuan Li</li>
 <li>Andrew Reed</li>
 <li>Ke Coby Wang</li>
 </ul>
@@ -92,6 +89,8 @@ Proof-Construction Strategies for Distributed Access-Control Systems</a></i>
 <li><a href="https://www.linkedin.com/pub/peng-li/74/b77/7b0">Peng Li</a>, Ph.D., 2014.
 <br>Thesis: <i><a href="https://doi.org/10.17615/a806-4792">Replication and Placement for Security in Distributed Systems</a></i>
 </li>
+<li><a href="https://www.linkedin.com/in/sheng-liu-00345b15a/">Sheng Liu</a>, Ph.D., 2021.
+<br>Thesis: <i>Efficient and Safe Migration of Network Functions Using Software-Defined Networking</i>
 <li><a href="http://www.linkedin.com/in/jonmccune/">Jonathan McCune</a>, Ph.D., 2009.
 <br>Thesis: <i><a href="./theses/mccune.pdf">Reducing the Trusted Computing Base for Applications on Commodity Systems</a></i>
 </li>
