Updated contact info

--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,18 @@
   </head>
   
 <body>
-<div class="centerh">
+<div class="centervh">
 <h2>Michael Reiter :: Work Address and Directions</h2>
 
 <p>
-<a href="http://www.cs.unc.edu">Department of Computer Science</a><br>
-<a href="http://www.unc.edu/">University of North Carolina at Chapel Hill</a><br>
-Campus Box 3175, Sitterson Hall<br>
-Chapel Hill, North Carolina 27599&#8211;3175<br>
+<a href="http://www.duke.edu/">Duke</a> <a href="http://www.cs.duke.edu">Computer Science</a><br>
+<a href="https://maps.duke.edu/?focus=95">LSRC Building</a> D310<br>
+308 Research Drive<br>
+Duke Box 90129<br>
+Durham, NC 27708&#8211;0129 USA<br>
 <br>
-<a href="http://www.cs.unc.edu/cms/about-us/about-us/directions-and-other-visitor-information">directions</a>,
-<a href="http://www.maps.unc.edu/">campus maps</a>
+<a href="https://www.cs.duke.edu/about/visitors">Information for visitors</a><br>
+<a href="https://maps.duke.edu">Campus map</a>
 </p>
 
 <p><a href="./index.html"><span class="fas fa-home fa-1x"></span></a></p>
