Updated title on contact page

--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,12 @@
   <head>
     <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/7057ffd65a.js" crossorigin="anonymous"></script>
-    <title>Michael Reiter :: Work Address and Directions</title>
+    <title>Michael Reiter :: Work Address</title>
   </head>
   
 <body>
 <div class="centervh">
-<h2>Michael Reiter :: Work Address and Directions</h2>
+<h2>Michael Reiter :: Work Address</h2>
 
 <p>
 <a href="http://www.duke.edu/">Duke</a> <a href="http://www.cs.duke.edu">Computer Science</a><br>
