Updated Yinqian web page

--- a/students.html
+++ b/students.html
@@ -122,7 +122,7 @@ via System-Wide Coordination and Optimization</a></i>
 <br>Thesis: <i><a href="./theses/yen.pdf">Detecting Stealthy Malware Using Behavioral Features in Network Traffic</a></i>
 </li>
 
-<li><a href="http://web.cse.ohio-state.edu/~yinqian/">Yinqian Zhang</a>, Ph.D., 2014.
+<li><a href="http://yinqian.org">Yinqian Zhang</a>, Ph.D., 2014.
 <br>Thesis: <i><a href="https://doi.org/10.17615/xt8k-ee40">Cache-Based Side-Channel Attacks in Multi-Tenant Public Clouds and Their Countermeasures</a></i>
 </li>
 
