Updated pubs list by year

--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -74,6 +74,7 @@ be reposted without the explicit permission of the copyright holder.
     </tr><tr>
       <td></td>
       <td><a href="#2020">2020</a></td>
+      <td><a href="#2021">2021</a></td>
     </tr>
   </table>
 </p>
@@ -83,6 +84,27 @@ be reposted without the explicit permission of the copyright holder.
 <hr>
 
 <ul>
+
+<li><b><a name="2021">Using Amnesia to detect credential database breaches</a></b>
+<br>K. C. Wang and M. K. Reiter
+<br>In <i>Proceedings of the 30th USENIX Security Symposium</i>, August 2021.
+</li>
+
+<li><b>Effect of mood, location, trust, and presence of others on video-based social authentication</b>
+<br>C. Guo, B. Campbell, A. Kapadia, M. K. Reiter, and K. Caine
+<br>In <i>Proceedings of the 30th USENIX Security Symposium</i>, August 2021.
+</li>
+
+<li><b>Role-based deception in enterprise networks</b>
+<br>I. Anjum, M. Zhu, I. Polinsky, W. Enck, M. K. Reiter, and M. Singh
+<br>In <i>Proceedings of the 11th ACM Conference on Data and Application Security
+and Privacy</i>, April 2021.
+</li>
+
+<li><b>TASE: Reducing latency of symbolic execution with transactional memory</b>
+<br>A. Humphries, K. Cating-Subramanian, and M. K. Reiter
+<br>In <i>Proceedings of the 28th ISOC Network and Distributed System Security Symposium</i>, February 2021.
+</li>
 
 <li><b><a name="2020"><a href="./2020/USENIX.pdf">Detecting stuffing of a user’s credentials at her own accounts</a></a></b>
 <br>K. C. Wang and M. K. Reiter
