--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2004,6 +2004,12 @@ a minimalist approach for network flow monitoring</a></b>
 <p><b><i><a name="NDSS">Internet Society Network and Distributed
 System Security Symposium (NDSS)</a></i></b>
 <table border=0 cellpadding=3>
+<tr valign=top><td>2021</td>
+<td><b>TASE: Reducing latency of symbolic execution with transactional memory</b>
+<br>A. Humphries, K. Cating-Subramanian, and M. K. Reiter
+<font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2021.24327">doi:10.14722/ndss.2021.24327</a></font>
+</td></tr>
+
 <tr valign=top><td>2019</td>
 <td><b><a href="./2019/NDSS1.pdf">How to end password reuse on the web</a></b>
 <br>K. C. Wang and M. K. Reiter.
