--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -381,6 +381,12 @@ href="http://doi.acm.org/10.1145/191177.191194">doi:10.1145/191177.191194</a> &n
 <p><b><i><a name="CODASPY">ACM Conference on Data and Application Security and Privacy (CODASPY)</a></i></b>
 
 <table border=0 cellpadding=3>
+<tr valign=top><td>2021</td>
+<td><b>Role-based deception in enterprise networks</b>
+<br>I. Anjum, M. Zhu, I. Polinsky, W. Enck, M. K. Reiter, and M. Singh.
+<font size="-1"><a href="https://doi.org/10.1145/3422337.3447824">doi:10.1145/3422337.3447824</a></font>
+</td></tr>
+  
 <tr valign=top><td>2020</td>
 <td><b><a href="./2020/CODASPY.pdf"><i>n</i>-<i>m</i>-variant systems: Adversarial-resistant software rejuvenation for cloud-based web applications</a></b>
 <br>I. Polinsky, K. Martin, W. Enck, and M. K. Reiter.  <font size="-1"><a href="https://doi.org/10.1145/3374664.3375745">doi:10.1145/3374664.3375745</a></font>
@@ -2006,7 +2012,7 @@ System Security Symposium (NDSS)</a></i></b>
 <table border=0 cellpadding=3>
 <tr valign=top><td>2021</td>
 <td><b>TASE: Reducing latency of symbolic execution with transactional memory</b>
-<br>A. Humphries, K. Cating-Subramanian, and M. K. Reiter
+<br>A. Humphries, K. Cating-Subramanian, and M. K. Reiter.
 <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2021.24327">doi:10.14722/ndss.2021.24327</a></font>
 </td></tr>
 
@@ -2230,6 +2236,16 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <p><b><i><a name="USENIX_Security">USENIX Security Symposium</a></i></b>
 <table border=0 cellpadding=3>
 
+<tr valign=top><td>2021</td>
+<td><b>Using Amnesia to detect credential database breaches</b>
+<br>K. C. Wang and M. K. Reiter.
+</td></tr>
+
+<tr valign=top><td></td>
+<td><b>Effect of mood, location, trust, and presence of others on video-based social authentication</b>
+<br>C. Guo, B. Campbell, A. Kapadia, M. K. Reiter, and K. Caine.
+</td></tr>
+  
 <tr valign=top><td>2020</td>
 <td><b><a href="./2020/USENIX.pdf">Detecting stuffing of a user's credentials at her own accounts</a></b>
 <br>K. C. Wang and M. K. Reiter
