--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -99,6 +99,7 @@ be reposted without the explicit permission of the copyright holder.
 <br>I. Anjum, M. Zhu, I. Polinsky, W. Enck, M. K. Reiter, and M. Singh
 <br>In <i>Proceedings of the 11th ACM Conference on Data and Application Security
 and Privacy</i>, April 2021.
+<font size="-1"><a href="https://doi.org/10.1145/3422337.3447824">doi:10.1145/3422337.3447824</a></font>
 </li>
 
 <li><b>TASE: Reducing latency of symbolic execution with transactional memory</b>
