--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -503,6 +503,11 @@ version</a>.
 
 <p><b><i><a name="ASIACCS">ACM Asia Conference on Computer and Communications Security (ASIACCS)</a></i>, formerly <i>ACM Symposium on Information, Computer and Communications Security</i></b>
 <table border=0 cellpadding=3>
+<tr valign=top><td>2021</td>
+<td><b>Malware makeover: Breaking ML-based static analysis by modifying executable bytes</b>
+<br>K. Lucas, M. Sharif, L. Bauer, M. K. Reiter, and S. Shintre.
+</td></tr>
+
 <tr valign=top><td>2017</td>
 <td><b><a href="./2017/ASIACCS.pdf">Detecting privileged side-channel attacks in shielded execution with D&eacute;j&agrave; Vu</a></b>
 <br>S. Chen, X. Zhang, M. K. Reiter, and Y. Zhang.  <font size="-1"><a href="http://dx.doi.org/10.1145/3052973.3053007">doi:10.1145/3052973.3053007</a></font>
