--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -95,6 +95,11 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 30th USENIX Security Symposium</i>, August 2021.
 </li>
 
+<li><b>Malware makeover: Breaking ML-based static analysis by modifying executable bytes</b>
+<br>K. Lucas, M. Sharif, L. Bauer, M. K. Reiter, and S. Shintre
+<br>In <i>Proceedings of the 16th ACM Asia Conference on Computer and Communications Security</i>, June 2021.
+</li>
+
 <li><b>Role-based deception in enterprise networks</b>
 <br>I. Anjum, M. Zhu, I. Polinsky, W. Enck, M. K. Reiter, and M. Singh
 <br>In <i>Proceedings of the 11th ACM Conference on Data and Application Security
