Updated current students list

--- a/students.html
+++ b/students.html
@@ -38,9 +38,8 @@ application substantially.
 <p> I currently advise the following Ph.D. students:
 <ul>
 <li>Andrew Chi</li>
-<li>Chris Dean</li>
-<li><a href="https://www.linkedin.com/in/linan-gao-117b31191/">Linan Gao</a></li>
 <li>Adam Humphries</li>
+<li>Zonghao Huang</li>
 <li>Zehuan Li</li>
 <li>Andrew Reed</li>
 <li>Ke Coby Wang</li>
