Added DOI for Ziqiao dissertation

--- a/students.html
+++ b/students.html
@@ -126,7 +126,7 @@ via System-Wide Coordination and Optimization</a></i>
 </li>
 
 <li><a href="https://www.linkedin.com/in/ziqiao-zhou-a02b9b78/">Ziqiao Zhou</a>, Ph.D., 2020.
-<br>Thesis: <i>Evaluating Information Leakage by Quantitative and Interpretable Measurements</i>
+<br>Thesis: <i><a href="https://doi.org/10.17615/h4m8-cq49">Evaluating Information Leakage by Quantitative and Interpretable Measurements</a></i>
 </li>
 </ul>
 </p>
